--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 		<li class="plan_item"><a href="javascript:;"><%=list[i]%></a></li>
 	<% } %>
 </script>
+<script type="text/javascript" src="lib/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="lib/sotre.min.js"></script>
 <script type="text/javascript" src="js/util.js"></script>
 <script type="text/javascript" src="js/model.js"></script>
 <script type="text/javascript" src="js/view.js"></script>
